--- a/OOPT4Project/MainWindow.xaml
+++ b/OOPT4Project/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OOPTermProject.MainWindow"
+﻿<Window x:Class="OOPT4Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OOPTermProject"
+        xmlns:local="clr-namespace:OOPT4Project"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
