--- a/OOPT4Project/App.xaml
+++ b/OOPT4Project/App.xaml
@@ -1,9 +1,11 @@
-﻿<Application x:Class="OOPT4Project.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OOPT4Project"
-             StartupUri="MainWindow.xaml">
+﻿<prism:PrismApplication 
+    x:Class="OOPT4Project.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:OOPT4Project"
+    xmlns:prism="http://prismlibrary.com/"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
