--- a/OOPT4Project/App.xaml
+++ b/OOPT4Project/App.xaml
@@ -1,10 +1,41 @@
 ﻿<prism:PrismApplication 
-    x:Class="OOPT4Project.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:OOPT4Project"
-    xmlns:prism="http://prismlibrary.com/">
-    <Application.Resources>
+	x:Class="OOPT4Project.App"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="clr-namespace:OOPT4Project"
+	xmlns:prism="http://prismlibrary.com/">
+	<Application.Resources>
+        <FontFamily x:Key="InriaSerifRegular">pack://application:,,,/Resources/Fonts/#Inria Serif Regular</FontFamily>
+        <FontFamily x:Key="InriaSerifBold">pack://application:,,,/Resources/Fonts/#Inria Serif Bold</FontFamily>
 
-    </Application.Resources>
+        <DropShadowEffect x:Key="DropShadowHexalife" BlurRadius="5" Direction="315" Opacity="0.2"/>
+
+        <Style x:Key="AbstractSeparator" TargetType="{x:Type Rectangle}">
+			<Setter Property="Fill" Value="#16BEBE"/>
+			<Setter Property="RadiusX" Value="5"/>
+			<Setter Property="RadiusY" Value="5"/>
+			<Setter Property="StrokeThickness" Value="0"/>
+		</Style>
+
+		<Style x:Key="SeparatorThick" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
+			<Setter Property="Height" Value="10"/>
+		</Style>
+
+		<Style x:Key="SeparatorSlim" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
+			<Setter Property="Height" Value="4"/>
+		</Style>
+
+		<Style x:Key="LabelHexalife" TargetType="{x:Type Label}">
+			<Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontFamily" Value="{StaticResource InriaSerifBold}"/>
+        </Style>
+
+		<Style x:Key="LabelHexalifeBig" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
+			<Setter Property="FontSize" Value="60"/>
+		</Style>
+
+		<Style x:Key="LabelHexalifeSmall" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
+			<Setter Property="FontSize" Value="30"/>
+		</Style>
+	</Application.Resources>
 </prism:PrismApplication>
