--- a/OOPT4Project/Views/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow.xaml
@@ -21,9 +21,9 @@
         <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SkElement1" Margin="-1,0,-1,0"/>
         <Grid Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="40"/>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
@@ -46,27 +46,27 @@
         </Grid>
         <Grid Grid.Column="2" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="10"/>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="1.5*"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="69"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Height="84" Width="280" Margin="81,0,0,0" />
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="261,0,0,0" />
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="4" Grid.Column="1" Height="47" Width="189" Margin="172,0,0,0"/>
+            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" Margin="0,0,0,0" />
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="0,0,0,0" />
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1" Height="47" Width="189" Margin="0,0,0,0"/>
             <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" Margin="0,0,0,0" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="1" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,54,0,0" VerticalAlignment="Top" Width="300" Grid.Row="4" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1" Height="4" Margin="61,0,0,0"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="4" Grid.Column="1" Height="4"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="6" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
         </Grid>
     </Grid>
