--- a/OOPT4Project/Views/MainWindow/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow/MainWindow.xaml
@@ -5,12 +5,8 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:skia="clr-namespace:SkiaSharp.Views.WPF;assembly=SkiaSharp.Views.WPF"
 		xmlns:local="clr-namespace:OOPT4Project"
-		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-		xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
 		mc:Ignorable="d"
-		xmlns:prism="http://prismlibrary.com/"
-		prism:ViewModelLocator.AutoWireViewModel="True"
-		Title="{Binding Title}" Height="900" Width="1600" Background="#FF44AEB5" 
+		Title="Hexalife" Height="900" Width="1600" Background="#FF44AEB5" 
         TextOptions.TextRenderingMode="ClearType" MouseWheel="Window_MouseWheel" KeyDown="Window_KeyDown"
         >
     <Grid>
