--- a/OOPT4Project/Views/MainWindow/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow/MainWindow.xaml
@@ -1,13 +1,19 @@
-﻿<Window x:Class="OOPT4Project.Views.MainWindow"
+﻿<Window x:Class="OOPT4Project.Views.Main.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:skia="clr-namespace:SkiaSharp.Views.WPF;assembly=SkiaSharp.Views.WPF"
 		xmlns:local="clr-namespace:OOPT4Project"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 		mc:Ignorable="d"
-		Title="Hexalife" Height="900" Width="1600" Background="#FF44AEB5" 
-        TextOptions.TextRenderingMode="ClearType" MouseWheel="Window_MouseWheel" KeyDown="Window_KeyDown"
+		Title="Hexalife" Height="900" Width="1600"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Medium"
+        TextElement.FontSize="14"
+        FontFamily="{materialDesign:MaterialDesignFont}"
+        MouseWheel="Window_MouseWheel" KeyDown="Window_KeyDown"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -15,7 +21,7 @@
             <ColumnDefinition Width="1.8*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SkElement1" Margin="-1,0,-1,0"/>
+        <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SkElement1" Margin="-1,0,-1,0" MouseDown="SkElement1_MouseDown"/>
         <Grid Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="40"/>
@@ -23,30 +29,30 @@
                 <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="130"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="70"/>
+                <RowDefinition Height="80"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
+            <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
             <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation control" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"/>
             <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation settings" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4"/>
-            <Rectangle Style="{StaticResource SeparatorThick}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1"/>
+            <Rectangle Style="{StaticResource SeparatorThick}" HorizontalAlignment="Left" Margin="0,0,0,32" VerticalAlignment="Bottom" Width="300" Grid.Column="1"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="1"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="4"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Column="1" Grid.Row="6"/>
             <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="84,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="PlayButton_Click"/>
-            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Margin="37,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="SpeedDownButton_Click"/>
-            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="159,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
-            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="193,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="StepButton_Click"/>
-            <Button x:Name="NewMapButton" Grid.Column="1" Content="New Map" HorizontalAlignment="Left" Margin="37,25,0,0" Grid.Row="5" VerticalAlignment="Top" Click="NewMapButton_Click"/>
-            <Button x:Name="PopSimButton" Grid.Column="1" Content="Populate Simulation" HorizontalAlignment="Left" Margin="110,25,0,0" Grid.Row="5" VerticalAlignment="Top" Click="PopSimButton_Click"/>
-            <TextBox x:Name="SeedTB" Grid.Column="1" HorizontalAlignment="Left" Margin="37,62,0,0" Grid.Row="5" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="120" TextChanged="SeedTB_TextChanged"/>
+            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center" Click="SpeedDownButton_Click" Margin="10,0,0,0"/>
+            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="186,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
+            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="241,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="StepButton_Click"/>
+            <Button x:Name="NewMapButton" Grid.Column="1" Content="New Map" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="5" VerticalAlignment="Top" Click="NewMapButton_Click"/>
+            <Button x:Name="PopSimButton" Grid.Column="1" Content="Populate Simulation" HorizontalAlignment="Left" Margin="108,10,0,0" Grid.Row="5" VerticalAlignment="Top" Click="PopSimButton_Click"/>
+            <TextBox x:Name="SeedTB" Grid.Column="1" HorizontalAlignment="Left" Margin="10,47,0,0" Grid.Row="5" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="93" TextChanged="SeedTB_TextChanged" Background="#FFDFE0EF" Foreground="#FFD64949"/>
         </Grid>
         <Grid Grid.Column="2" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
@@ -55,7 +61,7 @@
                 <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="130"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="1.5*"/>
                 <RowDefinition Height="5"/>
@@ -64,14 +70,18 @@
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" Margin="0,0,0,0" />
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="0,0,0,0" />
+            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" />
+            <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="0,0,0,0" />
             <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1" Height="47" Width="189" Margin="0,0,0,0"/>
-            <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" Margin="0,0,0,0" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
+            <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" Margin="0,0,0,36" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="1" Grid.Column="1" Height="4"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="4" Grid.Column="1" Height="4"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="6" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
+            <DataGrid Grid.Column="1" Grid.Row="5" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,10,0,10"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="296,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="296,31,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <DataGrid Grid.Column="1" Grid.Row="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,139,0,10"/>
         </Grid>
     </Grid>
 </Window>
