--- a/OOPT4Project/App.xaml
+++ b/OOPT4Project/App.xaml
@@ -2,40 +2,48 @@
 	x:Class="OOPT4Project.App"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 	xmlns:local="clr-namespace:OOPT4Project"
     StartupUri="Views/MainWindow/MainWindow.xaml">
-	<Application.Resources>
-        <FontFamily x:Key="InriaSerifRegular">pack://application:,,,/Resources/Fonts/#Inria Serif Regular</FontFamily>
-        <FontFamily x:Key="InriaSerifBold">pack://application:,,,/Resources/Fonts/#Inria Serif Bold</FontFamily>
+    <Application.Resources>
+        <ResourceDictionary>
+            <FontFamily x:Key="InriaSerifRegular">pack://application:,,,/Resources/Fonts/#Inria Serif Regular</FontFamily>
+            <FontFamily x:Key="InriaSerifBold">pack://application:,,,/Resources/Fonts/#Inria Serif Bold</FontFamily>
 
-        <DropShadowEffect x:Key="DropShadowHexalife" BlurRadius="5" Direction="315" Opacity="0.2"/>
+            <DropShadowEffect x:Key="DropShadowHexalife" BlurRadius="5" Direction="315" Opacity="0.2"/>
 
-        <Style x:Key="AbstractSeparator" TargetType="{x:Type Rectangle}">
-			<Setter Property="Fill" Value="#16BEBE"/>
-			<Setter Property="RadiusX" Value="5"/>
-			<Setter Property="RadiusY" Value="5"/>
-			<Setter Property="StrokeThickness" Value="0"/>
-		</Style>
+            <Style x:Key="AbstractSeparator" TargetType="{x:Type Rectangle}">
+                <Setter Property="Fill" Value="#16BEBE"/>
+                <Setter Property="RadiusX" Value="5"/>
+                <Setter Property="RadiusY" Value="5"/>
+                <Setter Property="StrokeThickness" Value="0"/>
+            </Style>
 
-		<Style x:Key="SeparatorThick" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
-			<Setter Property="Height" Value="10"/>
-		</Style>
+            <Style x:Key="SeparatorThick" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
+                <Setter Property="Height" Value="10"/>
+            </Style>
 
-		<Style x:Key="SeparatorSlim" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
-			<Setter Property="Height" Value="4"/>
-		</Style>
+            <Style x:Key="SeparatorSlim" TargetType="{x:Type Rectangle}" BasedOn="{StaticResource AbstractSeparator}">
+                <Setter Property="Height" Value="4"/>
+            </Style>
 
-		<Style x:Key="LabelHexalife" TargetType="{x:Type Label}">
-			<Setter Property="Foreground" Value="White"/>
-            <Setter Property="FontFamily" Value="{StaticResource InriaSerifBold}"/>
-        </Style>
+            <Style x:Key="LabelHexalife" TargetType="{x:Type Label}">
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontFamily" Value="{StaticResource InriaSerifBold}"/>
+            </Style>
 
-		<Style x:Key="LabelHexalifeBig" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
-			<Setter Property="FontSize" Value="60"/>
-		</Style>
+            <Style x:Key="LabelHexalifeBig" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
+                <Setter Property="FontSize" Value="60"/>
+            </Style>
 
-		<Style x:Key="LabelHexalifeSmall" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
-			<Setter Property="FontSize" Value="30"/>
-		</Style>
-	</Application.Resources>
+            <Style x:Key="LabelHexalifeSmall" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelHexalife}">
+                <Setter Property="FontSize" Value="30"/>
+            </Style>
+
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
