--- a/OOPT4Project/Views/MainWindow/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow/MainWindow.xaml
@@ -31,28 +31,32 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="130"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="80"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
             <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
             <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation control" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"/>
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation settings" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4"/>
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation settings" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="6"/>
             <Rectangle Style="{StaticResource SeparatorThick}" HorizontalAlignment="Left" Margin="0,0,0,32" VerticalAlignment="Bottom" Width="300" Grid.Column="1"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="1"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Column="1" Grid.Row="6"/>
-            <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="84,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="PlayButton_Click"/>
-            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center" Click="SpeedDownButton_Click" Margin="10,0,0,0"/>
-            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="186,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
-            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="241,0,0,0" Grid.Row="2" VerticalAlignment="Center" Click="StepButton_Click"/>
-            <Button x:Name="NewMapButton" Grid.Column="1" Content="New Map" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="5" VerticalAlignment="Top" Click="NewMapButton_Click"/>
-            <Button x:Name="PopSimButton" Grid.Column="1" Content="Populate Simulation" HorizontalAlignment="Left" Margin="108,10,0,0" Grid.Row="5" VerticalAlignment="Top" Click="PopSimButton_Click"/>
-            <TextBox x:Name="SeedTB" Grid.Column="1" HorizontalAlignment="Left" Margin="10,47,0,0" Grid.Row="5" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="93" TextChanged="SeedTB_TextChanged" Background="#FFDFE0EF" Foreground="#FFD64949"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="5" Grid.Column="1"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="6"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Column="1" Grid.Row="10"/>
+            <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="74,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="PlayButton_Click"/>
+            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center" Click="SpeedDownButton_Click"/>
+            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="176,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
+            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="231,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="StepButton_Click"/>
+            <Button x:Name="NewMapButton" Grid.Column="1" Content="New Map" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Click="NewMapButton_Click"/>
+            <Button x:Name="PopSimButton" Grid.Column="1" Content="Populate Simulation" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Click="PopSimButton_Click" Margin="96,0,0,0"/>
+            <TextBox x:Name="SeedTB" Grid.Column="1" HorizontalAlignment="Left" Margin="0,37,0,0" Grid.Row="8" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="91" TextChanged="SeedTB_TextChanged" Background="#FFDFE0EF" Foreground="#FFD64949"/>
         </Grid>
         <Grid Grid.Column="2" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
@@ -63,25 +67,29 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="130"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="1.5*"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="81*"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="56*"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
             <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" />
-            <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="0,0,0,0" />
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1" Height="47" Width="189" Margin="0,0,0,0"/>
+            <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="271,0,0,0" />
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="6" Grid.Column="1" Height="47" Width="189" Margin="182,0,0,0"/>
             <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" Margin="0,0,0,36" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
             <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="1" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="4" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="3" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Grid.Row="6" Grid.Column="1" Height="4" Margin="0,0,0,0"/>
-            <DataGrid Grid.Column="1" Grid.Row="5" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,10,0,10"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="296,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="296,31,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <DataGrid Grid.Column="1" Grid.Row="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,139,0,10"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,2" VerticalAlignment="Bottom" Width="300" Grid.Row="6" Grid.Column="1" Height="4"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="5" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="10" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
+            <DataGrid Grid.Column="1" Grid.Row="8" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,4,0,4"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="285,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontFamily="Inria Serif" FontSize="16"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="295,41,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <DataGrid x:Name="CreatureListDataGrid" Grid.Column="1" Grid.Row="3" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,114,0,6" Background="#FF74F7E2" BorderBrush="#1F5F2B2B"/>
         </Grid>
     </Grid>
 </Window>
